Populate Projects section
Created 'highlighted_projects' collection, and added items into it.
Rendered them in the index page, and styled them.

	modified:   _config.yml
	new file:   _highlighted_projects/battleship.md
	new file:   _highlighted_projects/crt-scanlines-effect.md
	new file:   _highlighted_projects/duck.md
	new file:   _highlighted_projects/hacking-event-flow.md
	new file:   _highlighted_projects/phacepook.md
	modified:   assets/css/style.scss
	modified:   index.html

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -221,8 +221,37 @@ section:not(:last-child) {
   grid-column: 1 / -1;
 }
 
+.project h1,
+.project .info {
+  padding: .5rem 1rem;
+  padding-top: 1rem;
+}
+
+.project h1 {
+  font-size: 1.3rem;
+}
+
+.project .info hr {
+  border: 0;
+  background-color: #06BCC1;
+  height: 1px;
+  margin: .5rem 1rem;
+}
+
+.project .topics li {
+  display: inline-block;
+  color: #06BCC1;
+  margin-bottom: .25em;
+}
+
+.topics li ~ li::before {
+  content: ", ";
+}
+
 @media screen and (max-width:500px) {
   html { font-size: 14px; }
 
   .title-block h1 { font-size: 3rem; }
+
+  .projects-list { grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); }
 }
