Fix main-content placement
main-content offsets to the right on large screens only for the
home page, i.e. index.html

--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -8,7 +8,7 @@ layout: base
     <li><a href="#contact">Contact</a></li>
   </ul>
 </div>
-<div class="main-content">
+<div class="main-content {% if page.url == '/' %}on-homepage{% endif %}">
   {{ content }}
 
   <footer class="footer">
