--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -280,7 +280,7 @@ h2 {
     border-right: .4rem solid #DB2763;
   }
 
-  .main-content {
+  .main-content.on-homepage {
     margin-left: 33%;
   }
 }
