--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -78,6 +78,10 @@ section:not(:last-child) {
   margin-bottom: 2rem;
 }
 
+h1 {
+  padding-top: 1rem;
+}
+
 h2 {
   margin-top: 1em;
   margin-bottom: .6em;
@@ -171,7 +175,6 @@ h2 {
   font-size: 4rem;
   text-align: center;
   margin-bottom: 1rem;
-  padding-top: 1rem;
 }
 
 .title-block p {
