Fix Projects and Contact navigation links
They were just fragment hrefs (#contact etc), since the site was
just one page. However, to support the 404 page, and possible
future pages, the paths are changed to root doc (/) and fragment.

--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -4,8 +4,8 @@ layout: base
 <div class="navigation-bar fill">
   <ul class="top-nav container">
     <li {% if page.url == "/" %} style="visibility: hidden;" {% endif %}><a href="/">Home</a></li>
-    <li><a href="#portfolio">Projects</a></li>
-    <li><a href="#contact">Contact</a></li>
+    <li><a href="/#portfolio">Projects</a></li>
+    <li><a href="/#contact">Contact</a></li>
   </ul>
 </div>
 <div class="main-content {% if page.url == '/' %}on-homepage{% endif %}">
