--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {%- seo -%}
     <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
-    
+    <link rel="shortcut icon" href="{{ "/assets/images/logo-v2-icon.svg" | relative_url }}" type="image/svg">
   </head>
   
