Add smooth scrolling
	modified:   _includes/head.html
	new file:   assets/js/script.js

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,5 +5,5 @@
     {%- seo -%}
     <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
     <link rel="shortcut icon" href="{{ "/assets/images/logo-v2-icon.svg" | relative_url }}" type="image/svg">
-  </head>
-  
+    <script src="{{ "assets/js/script.js" | relative_url }}"></script>
+</head>
