Separate a project's link from its title
Added a new front matter variable 'link-verb' containing the call
to action text. The <a> element pointing to 'link' front matter
is now in the project body instead of its title.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -242,6 +242,10 @@ h2 {
   margin: .5rem 1rem;
 }
 
+.project .cta {
+  text-align: right;
+}
+
 .project .topics li {
   display: inline-block;
   color: #06BCC1;
