Update copyright year

--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -12,6 +12,6 @@ layout: base
   {{ content }}
 
   <footer class="footer">
-    <p class="cpyr">Copyright © 2024 <a href="/">Dimitar Apostolovski</a></p>
+    <p class="cpyr">Copyright © {{ "now" | date: "%Y" }} <a href="/">Dimitar Apostolovski</a></p>
   </footer>
 </div>
